--- a/RoadRunner/RoadRunner.csproj
+++ b/RoadRunner/RoadRunner.csproj
@@ -67,6 +67,12 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="assets\images\enemycar.gif" />
+    <Content Include="assets\images\fuel.jpg" />
+    <Content Include="assets\images\hero.jpg" />
+    <Content Include="assets\images\playagainbutton.png" />
+    <Content Include="assets\images\playbutton.png" />
+    <Content Include="assets\images\runningpath.png" />
     <Content Include="css\game.css" />
     <Content Include="index.html" />
     <Content Include="Scripts\lib\easeljs-0.8.0.min.js" />
@@ -82,11 +88,17 @@
   <ItemGroup>
     <Folder Include="assets\audio\" />
     <Folder Include="assets\font\" />
-    <Folder Include="assets\images\" />
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="Scripts\constants.ts" />
     <TypeScriptCompile Include="Scripts\game.ts" />
+    <TypeScriptCompile Include="Scripts\objects\button.ts" />
+    <TypeScriptCompile Include="Scripts\objects\enemycar.ts" />
+    <TypeScriptCompile Include="Scripts\objects\fuel.ts" />
+    <TypeScriptCompile Include="Scripts\objects\gameobject.ts" />
+    <TypeScriptCompile Include="Scripts\objects\hero.ts" />
+    <TypeScriptCompile Include="Scripts\objects\label.ts" />
+    <TypeScriptCompile Include="Scripts\objects\runningpath.ts" />
     <TypeScriptCompile Include="Scripts\typings\createjs-lib\createjs-lib.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\easeljs\easeljs.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\preloadjs\preloadjs.d.ts" />
