Add Score Board Information

--- a/RoadRunner/RoadRunner.csproj
+++ b/RoadRunner/RoadRunner.csproj
@@ -101,6 +101,7 @@
     <TypeScriptCompile Include="Scripts\objects\hero.ts" />
     <TypeScriptCompile Include="Scripts\objects\label.ts" />
     <TypeScriptCompile Include="Scripts\objects\runningpath.ts" />
+    <TypeScriptCompile Include="Scripts\objects\scoreboard.ts" />
     <TypeScriptCompile Include="Scripts\typings\createjs-lib\createjs-lib.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\easeljs\easeljs.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\preloadjs\preloadjs.d.ts" />
